--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -35,17 +35,17 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 22px;
+        margin: 20px 0;
 
         &--menu{
-            margin: 0;
         }
         &-item{
             min-width: 150px;
-            text-align: center center;
+            text-align: center ;
             background-color: #0f1f4b;
             border-radius: 50%;
             padding: 10px;
-            margin: 40px 20px;
+            margin: 10px  20px;
         }
         &-item:hover{
             background-color: lighten($color: #0f1f4b, $amount: 5);
