--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,7 @@
 
 .header{
     background-color: transparentize( $main-header-bg-color , $amount: 0.00);
-    padding: 30px 0;
+    padding: 50px 0;
     &__inner{
 
         &-link {
@@ -29,13 +29,18 @@
             transition: ease-in;
         }
     }
+    @media (max-width: 404px ) {
+        &.header{
+            padding: 10px 0;
+        }
+    }
 
     &__navbar{
         @include logo();
         font-weight: 500;
         font-size: 18px;
         line-height: 22px;
-        margin: 20px 0;
+        padding-top: 50px ;
 
         &--menu{
         }
