--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -11,11 +11,17 @@
  
          &-note{
              @include font-text("Roboto Slab");
-             font-size: 32px;
+             font-size: 36px;
              font-weight: normal;
              text-align: center;
-             line-height: 38px;
+             line-height: 40px;
              margin: 0 auto 30px auto;
+         }
+         @media (max-width: 575.98px) {
+             &-note{
+                 font-size: 26px;
+                 line-height: 30px;
+             }
          }
 
          &--button{
@@ -35,6 +41,8 @@
      }
  }
 .services{
+    padding: 70px 0;
+
     &__title{
         @include title();
         font-size: 40px;
@@ -63,6 +71,11 @@
         &-text{
             margin: 50px 0;
         }
+        @media (max-width: 575.98px) {
+            &-text{
+                margin:10px 0;
+            }
+        }
 
         &-button{
             @include button-link();
@@ -82,6 +95,11 @@
         width: 80%;
         border-radius: 15%;
         margin: 20px 0;
+    }
+    @media (max-width: 575.98px) {
+        &__schedule{
+            width: 100%;
+        }
     }
     
     &__text{
@@ -137,6 +155,12 @@ hr{
         font-weight: normal;
         font-style: normal;
         line-height: 45px;
+    }
+    @media (max-width: 575.98px) {
+        &__text{
+            font-size: 26px;
+            line-height: 30px;
+        }
     }
     &__img {
         height: 600px;
